# node-gst

./: CMakeLists.txt  README.md  binding.gyp  index.js  main.cpp  multi.cpp  package.json  player.cpp  test.js  tutorial_01.js
src/: Bus.cpp  Bus.h  Element.cpp  Element.h  Pipeline.cpp  Pipeline.h  Streamer.cpp  Streamer.h  exports.cpp
tutorials/: tutorial_01.c
tutorials/tutorial_01/: tutorial_01.c  tutorial_01.js
tutorials/tutorial_02/: tutorial_02.c  tutorial_02.js
